# patient-risk-predictor

./: .env.example  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml
examples/: advanced.py  basic.py
src/: __init__.py  __main__.py  api.py  core.py  health.py  patient.py  riskpredictor.py  utils.py
src/data/: feature_engineering.py  fhir_parser.py  synthetic_generator.py
src/explainability/: shap_explainer.py
src/models/: readmission.py  sepsis.py
tests/: test_api.py  test_basic.py  test_benchmark.py  test_core.py  test_integration.py  test_riskpredictor.py
